feat: massively expand Mio Mode JVM tuning (JIT/CPU/G1/largepages/ZGC)
Expand L1 from 6 params to 24+ params across four optimization dimensions,
plus two new optional sub-toggles for large pages and experimental ZGC.

L1 base (always on when mioModeJvm):
- JIT inlining: MaxInlineLevel=15, MaxInlineSize=45, FreqInlineSize=325,
  UseTypeSpeculation, UseProfiledLoopPredicate (JDK 16+)
- CPU intrinsics: UseAES, UseAESIntrinsics, UseFMA, UseSuperWord, UseBMI2
  (AVX level left auto to avoid unsupported CPU boot failure)
- G1 GC aggressive: MaxGCPauseMillis=50 (was 200), G1NewSizePercent=30,
  G1ReservePercent=10 (was 20), G1MixedGCCountTarget=2 (was 4),
  G1HeapWastePercent=3, TargetSurvivorRatio=90, MaxTenuringThreshold=15
- CodeCache: ReservedCodeCacheSize=256M, InitialCodeCacheSize=32M
- Allocator: AllocatePrefetchStyle=2, TrustFinalNonStaticFields

L1+ large pages (optional, mioModeLargePages):
- UseLargePages + UseLargePagesInMetaspace + UseNUMA
- JVM auto-degrades to regular pages if unsupported, no boot failure

L1+ experimental ZGC (optional, mioModeZgc):
- UseZGC + ZGenerational (JDK 21 generational, sub-ms pauses)
- SoftMaxHeapSize, ZAllocationSpikeTolerance=2.0, ZProactive
- Auto-skips AikarFlags and -XX:+UseG1GC to avoid GC conflict
- Injects ZGC params + non-G1 aggressive params (JIT/CPU/CodeCache)
- Honest warning: Aikar's Flags tuned for G1, ZGC may regress MC's
  allocation-heavy chunk loading workloads

Conflict handling in LaunchProfileBuilder:
- ZGC mode skips AikarFlags, GcType injection, and G1-specific params
  from MioFlags.build() via prefix filtering

Preferences: new mioModeLargePages + mioModeZgc fields, persisted
SettingsPage: two new sub-switches with honest risk descriptions

Note on C++: considered but rejected — MC performance is bounded by its
own JVM bytecode, PMCL cannot optimize MC internals via C++. JVM tuning
remains the highest ROI path for a launcher.